--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,33 @@
 plugins {
     id 'groovy'
     id 'java'
-    id 'org.springframework.boot' version '2.7.1'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '3.2.3'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group 'Subscriber'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+java {
+    sourceCompatibility = '17'
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.codehaus.groovy:groovy-all:2.3.11'
-    testImplementation 'junit:junit:4.12'
+    implementation 'org.codehaus.groovy:groovy-all:3.0.9'
+    testImplementation 'junit:junit:4.13.2'
+
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
-}
 
+    implementation 'com.amazonaws:aws-java-sdk-ec2:1.12.666'
+    implementation 'com.amazonaws:aws-java-sdk-bom:1.12.666'
+    implementation 'org.json:json:20231013'
+
+    implementation 'javax.servlet:javax.servlet-api:4.0.1' // Adjust version as needed
+}
